Temporarily hid links to missing features on the new site (About Us page + end, restart, and cancel run options); fixed some visual and layout bugs

--- a/src/main/webapp/site/src/app/features/features.component.scss
+++ b/src/main/webapp/site/src/app/features/features.component.scss
@@ -19,7 +19,7 @@
 
 .features__intro {
   $intro-border-radius: 70% 40% 60% 40%;
-  @include feature-styles($intro-border-radius);
+  @include feature-styles($intro-border-radius, 0);
 
   @media (min-width: breakpoint('sm.min')) {
     margin-top: -64px;
